[project]
name = "leap-template-feedstock"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "bokeh>=3.7.2",
    "dask>=2025.4.0",
    "distributed>=2025.4.0",
    "earthaccess>=0.14.0",
    "fsspec>=2025.3.2",
    "h5netcdf>=1.6.1",
    "ipython>=9.2.0",
    "obstore>=0.6.0",
    "pre-commit>=4.2.0",
    "s3fs>=2025.3.2",
    "xarray[accel,io]>=2025.3.1",
    "zarr>=3.0.7",
]


[tool.ruff]
line-length = 100
target-version = "py310"
builtins = ["ellipsis"]
# Exclude a variety of commonly ignored directories.

exclude = [
  'configs',        # to avoid raising "F821 Undefined name `c`" in each of the configs
  ".bzr",
  ".direnv",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".nox",
  ".pants.d",
  ".ruff_cache",
  ".svn",
  ".tox",
  ".venv",
  "__pypackages__",
  "_build",
  "buck-out",
  "build",
  "dist",
  "node_modules",
  "venv",
]
[tool.ruff.lint]
per-file-ignores = {}
ignore = [
  "E721", # Comparing types instead of isinstance
  "E741", # Ambiguous variable names
  "E501", # Conflicts with ruff format
]
select = [
  # Pyflakes
  "F",
  # Pycodestyle
  "E",
  "W",
  # isort
  "I",
  # Pyupgrade
  "UP",
]


[tool.ruff.lint.mccabe]
max-complexity = 18

[tool.ruff.lint.isort]
known-first-party = ["offsets_db_api"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true
